--- a/WebContent/views/admin.html
+++ b/WebContent/views/admin.html
@@ -53,8 +53,8 @@
       <td md-cell>{{cust.id}}</td>
       <td md-cell>{{cust.custName}}</td>
       <td md-cell><input type="text"
-					ng-model="cust.password" ng-change="passChanged = !passChanged" /></td>
-	<td md-cell><md-button class="md-raised md-primary" ng-disabled="!passChanged" ng-click="passChanged = !passChanged; updateCustomer(cust);">Save</md-button></td>
+					ng-model="cust.password" ng-change="passChanged = 1" /></td>
+	<td md-cell><md-button class="md-raised md-primary" ng-init="passChanged = 0" ng-disabled="passChanged == 0" ng-click="passChanged = !passChanged; updateCustomer(cust); passChanged = 0">Save</md-button></td>
 	<td md-cell><md-button class="md-raised md-primary"  ng-click="removeDialog($event,$index,cust,customerList,'Customer');">Remove</md-button></td>
 	 </tr>
 	  <td md-cell><md-button class="md-fab md-primary" ng-click="showCreateDialog($event,'Customer')">
@@ -80,9 +80,9 @@
       <td md-cell>{{comp.id}}</td>
       <td md-cell>{{comp.compName}}</td>
       <td md-cell><input type="text"
-					ng-model="comp.password" ng-change="passChanged = !passChanged" /></td>
+					ng-model="comp.password" ng-change="passChanged = 1" /></td>
 		<td md-cell>{{comp.email}}</td>			
-	<td md-cell><md-button class="md-raised md-primary" ng-disabled="!passChanged" ng-click="passChanged = !passChanged; updateCompany(comp);">Save</md-button></td>
+	<td md-cell><md-button class="md-raised md-primary" ng-init="passChanged = 0" ng-disabled="passChanged == 0" ng-click="passChanged = !passChanged; updateCompany(comp); passChanged = 0">Save</md-button></td>
 	<td md-cell><md-button class="md-raised md-primary"  ng-click="removeDialog($event,$index,comp,companyList,'Company');">Remove</md-button></td>	
 	 </tr>
 	  <td md-cell><md-button class="md-fab md-primary" ng-click="showCreateDialog($event,'Company')">
