Web site graphical adjustment specially login screen
connection error toast

--- a/WebContent/views/admin.html
+++ b/WebContent/views/admin.html
@@ -6,10 +6,8 @@
 <link href="../CSS/main.css" rel="stylesheet" />
 <link rel="stylesheet" href="../CSS/angular-material.min.css">
 <link rel="stylesheet" href="../CSS/md-data-table.min.css">
-<link rel="stylesheet"
-	href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic">
-<script
-	src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular.min.js"></script>
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic">
+<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular.min.js"></script>
 <script
 	src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-aria.min.js"></script>
 <script
