Last adjustments in views

--- a/WebContent/views/admin.html
+++ b/WebContent/views/admin.html
@@ -27,7 +27,7 @@
           <span>Admin screen</span>
         </h2>
         <span flex></span>
-        <md-button class="md-icon-button">
+        <md-button class="md-icon-button" ng-click="logout()">
           <md-icon md-svg-icon="../img/icons/exit.svg" ></md-icon>
         </md-button>
       </div>
