--- a/WebContent/views/company.html
+++ b/WebContent/views/company.html
@@ -25,7 +25,19 @@
 
 </head>
 <body ng-app="company" ng-controller="companyController" ng-init="init()" style="background-color: #85e085;">
-<h1>{{companyDetails.compName}} - {{companyDetails.email}} </h1>
+    <md-toolbar class="md-hue-2">
+      <div class="md-toolbar-tools">
+          <md-icon md-svg-icon="../img/icons/cash-register.svg"></md-icon>
+        <h2>
+          <span>Company screen : {{companyDetails.compName}} - {{companyDetails.email}}</span>
+        </h2>
+        <span flex></span>
+        <md-button class="md-icon-button" ng-click="logout()">
+          <md-icon md-svg-icon="../img/icons/exit.svg" ></md-icon>
+        </md-button>
+      </div>
+    </md-toolbar>
+
 
 <div style="float: left; border-right:solid;">
 <md-input-container class="md-block" flex-gt-sm>
