--- a/WebContent/views/admin.html
+++ b/WebContent/views/admin.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="ISO-8859-1">
-<title>Insert title here</title>
+<title>CouponSystem</title>
 <link href="../CSS/main.css" rel="stylesheet" />
 <link rel="stylesheet" href="../CSS/angular-material.min.css">
 <link rel="stylesheet" href="../CSS/md-data-table.min.css">
