--- a/WebContent/views/admin.html
+++ b/WebContent/views/admin.html
@@ -138,7 +138,7 @@
 <tr md-row ng-repeat="income in incomesList">
 <td md-cell>{{income.id}}</td>
 <td md-cell>{{income.name}}</td>
-<td md-cell>{{income.date.dayOfMonth}}/{{income.date.monthValue}}/{{income.date.year}}</td>
+<td md-cell>{{income.date.year}}-{{income.date.monthValue}}-{{income.date.dayOfMonth}}</td>
 <td md-cell>{{income.description}}</td>
 <td md-cell>{{income.amount}}</td>
 </tr>
