--- a/WebContent/views/company.html
+++ b/WebContent/views/company.html
@@ -125,7 +125,7 @@
       <tr md-row ng-repeat="income in incomeList | orderBy: myOrder | filter:search">
       <td md-cell>{{income.id}}</td>
       <td md-cell>{{income.name}}</td>
-      <td md-cell>{{income.date | date}}</td>
+      <td md-cell>{{income.date.year}}-{{income.date.monthValue}}-{{income.date.dayOfMonth}}</td>
       <td md-cell>{{income.description}}</td>
       <td md-cell>{{income.amount}}</td>	
 	 </tr>
