--- a/WebContent/views/admin.html
+++ b/WebContent/views/admin.html
@@ -19,7 +19,7 @@
 <script src="../app/controllers/adminController.js"></script>
 <script src="../app/js/myComponent.js"></script>
 </head>
-<body ng-app="admin" ng-controller="adminController" ng-init="init()" style="background-color: #85e085;">
+<body ng-app="admin" ng-controller="adminController" ng-init="init()">
 
     <md-toolbar class="md-hue-2">
       <div class="md-toolbar-tools">
@@ -66,7 +66,7 @@
 					ng-model="cust.password" ng-change="passChanged = 1" /></td>
 	<td md-cell><md-button class="md-raised md-primary" ng-init="passChanged = 0" ng-disabled="passChanged == 0" ng-click="passChanged = !passChanged; updateCustomer(cust); passChanged = 0">Save</md-button></td>
 	<td md-cell><md-button class="md-raised md-primary"  ng-click="removeDialog($event,$index,cust,customerList,'Customer');">Remove</md-button></td>		
-		<td md-cell><md-button class="md-raised md-primary"  ng-click="incomeTbl=true; viewIncomeByCustomer(cust)">Income</md-button></td>
+		<td md-cell><md-button class="md-raised md-primary"  ng-click="toggleLeft(cust); viewIncomeByCustomer(cust)">Income</md-button></td>
 	 </tr>
 	  <td md-cell><md-button class="md-fab md-primary" ng-click="showCreateDialog($event,'Customer')">
       <md-icon md-svg-icon="../img/icons/1475902602_plus.svg"></md-icon>
@@ -95,7 +95,7 @@
 		<td md-cell>{{comp.email}}</td>			
 	<td md-cell><md-button class="md-raised md-primary" ng-init="passChanged = 0" ng-disabled="passChanged == 0" ng-click="passChanged = !passChanged; updateCompany(comp); passChanged = 0">Save</md-button></td>
 	<td md-cell><md-button class="md-raised md-primary"  ng-click="removeDialog($event,$index,comp,companyList,'Company');">Remove</md-button></td>	
-		<td md-cell><md-button class="md-raised md-primary"  ng-click="toggleLeft(); viewIncomeByCompan(comp)">Income</md-button></td>	
+		<td md-cell><md-button class="md-raised md-primary"  ng-click="toggleLeft(comp); viewIncomeByCompan(comp)">Income</md-button></td>	
 	 </tr>
 	  <td md-cell><md-button class="md-fab md-primary" ng-click="showCreateDialog($event,'Company')">
       <md-icon md-svg-icon="../img/icons/1475902602_plus.svg"></md-icon>
@@ -103,7 +103,7 @@
     </tbody>
   </table>
 </md-table-container>
-
+<hr />
 <md-table-container ng-show=showCoupons>
 <table md-table>
 <thead md-head>
@@ -123,70 +123,25 @@
 </md-table-container>
 <h1 ng-show="couponList.length===0">No coupons were purchased</h1>
 
-<hr />
-<h2>Transaction activities</h2>
-<!-- 
-<md-table-container>
-<table md-table>
-<thead md-head>
-<th md-column>Id</th>
-<th md-column>Customer/Company charged name</th>
-<th md-column>Action date</th>
-<th md-column>Description</th>
-<th md-column>Amount</th>
-</thead>
-<tbody>
-<tr md-row ng-repeat="income in incomesList">
-<td md-cell>{{income.id}}</td>
-<td md-cell>{{income.name}}</td>
-<td md-cell>{{income.date.year}}-{{income.date.monthValue}}-{{income.date.dayOfMonth}}</td>
-<td md-cell>{{income.description}}</td>
-<td md-cell>{{income.amount}}</td>
-</tr>
-</tbody>
-</table>
-</md-table-container>
- -->
- <md-sidenav class="md-sidenav-left" md-component-id="IncomeSideNav"
-                md-disable-backdrop md-whiteframe="4">
-                
-                      <md-toolbar class="md-theme-indigo">
-        <h1 class="md-toolbar-tools">Income</h1>
-      </md-toolbar>
-      
-<md-table-container>
-<table md-table>
-<thead md-head>
-<th md-column>Id</th>
-<th md-column>Customer/Company charged name</th>
-<th md-column>Action date</th>
-<th md-column>Description</th>
-<th md-column>Amount</th>
-</thead>
-<tbody>
-<tr md-row ng-repeat="income in incomesList">
-<td md-cell>{{income.id}}</td>
-<td md-cell>{{income.name}}</td>
-<td md-cell>{{income.date.year}}-{{income.date.monthValue}}-{{income.date.dayOfMonth}}</td>
-<td md-cell>{{income.description}}</td>
-<td md-cell>{{income.amount}}</td>
-</tr>
-</tbody>
-</table>
-</md-table-container>
-
-
-
-      <md-content layout-margin>
-        <p>
-          This sidenav is not showing any backdrop, where users can click on it, to close the sidenav.
-        </p>
-        <md-button ng-click="toggleLeft()" class="md-accent">
-          Close this Sidenav
-        </md-button>
-      </md-content>
-
-    </md-sidenav>
+	<md-sidenav class="md-sidenav-left" md-component-id="IncomeSideNav"
+		md-disable-backdrop md-whiteframe="4"> <md-toolbar
+		class="md-theme-indigo">
+	<h1 class="md-toolbar-tools">Transaction activities for {{compNameToggle}}</h1>
+	</md-toolbar>
+		<md-content layout-margin> 
+			<md-button ng-click="closeLeft()" class="md-accent"> Close </md-button>
+		</md-content>
+	<div ng-repeat="income in incomesList">
+		<md-content layout-margin>
+		<hr />
+		<p>Customer/Company charged name: {{income.name}}</p>
+		<p>Action date:
+			{{income.date.year}}-{{income.date.monthValue}}-{{income.date.dayOfMonth}}</p>
+		<p>Description: {{income.description}}</p>
+		<p>Amount: {{income.amount}}</p>
+		</md-content>
+	</div>
+ </md-sidenav>
 
 </body>
 </html>
